--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "start": "react-native start --reset-cache",
+    "ios": "react-native run-ios --simulator=\"iPhone 14\"",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^6.6.13",
+    "@react-navigation/native": "^6.1.17",
+    "@reduxjs/toolkit": "^2.2.3",
+    "babel-plugin-module-resolver": "^5.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-pager-view": "^6.3.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
