--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,21 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "~src/*": ["src/*"],
+      "~components/*": ["src/components/*"],
+      "~screens/*": ["src/screens/*"],
+      "~navigation/*": ["src/navigation/*"],
+      "~utils/*": ["src/utils/*"],
+      "~constants/*": ["src/constants/*"],
+      "~context/*": ["src/context/*"],
+      "~hooks/*": ["src/hooks/*"],
+      "~store/*": ["src/store/*"],
+      "~assets/*": ["src/assets/*"],
+    },
+  }
 }
