--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.7.2",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -19,9 +20,13 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-pager-view": "^6.3.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-picker-select": "^9.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
+    "react-native-select-dropdown": "^4.0.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
